# avn-dev-node

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.local  README.md
.github/workflows/: build-deploy.yaml  cargo-build.yaml  cargo-build.yml  cargo-check.yaml  cargo-test.yaml  cargo-test.yml  ci.yaml  ci.yml  image-build.yaml  test-code.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
parachain-launch/: README.md  config.yml
runtime/: Cargo.toml  README.md
runtime/src/: constants.rs  emulations.rs  lib.rs  proxy_config.rs
